# project-caroline

./: .gitattributes  .gitignore  .gitleaks.toml  .htmlvalidate.json  CONTRIBUTING.md  LICENSE  NOTICE.md  Project-Caroline-SteamDeck-Installer.desktop  README.md  caroline-agent-loop.json  caroline-auto-tasks.json  caroline-kiosk.html  caroline-wonder-loop.json  flows.json  index.html  install-steamos.sh  install.sh  uninstall.sh
.claude/: settings.local.json
caroline-companion/: README.md  index.html  package-lock.json  package.json  vite.config.ts
caroline-companion/src-tauri/: Cargo.toml  tauri.conf.json
caroline-companion/src-tauri/capabilities/: default.json
caroline-companion/src-tauri/src/: lib.rs  main.rs
caroline-deck-installer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
caroline-deck-installer/src-tauri/: Cargo.toml  tauri.conf.json
caroline-deck-installer/src-tauri/capabilities/: default.json
caroline-deck-installer/src-tauri/icons/: icon.icns
caroline-deck-installer/src-tauri/src/: lib.rs  main.rs
demo/: index.html
docs/: architecture.md  backup-restore.md  beta-1-readiness.md  beta-health.md  beta-outreach-kit.md  beta-testing.md  clean-reinstall-qa.md  companion-client.md  discord.md  google-oauth.md  how-to-create-install-media.md  how-to-raspberry-pi-os.md  how-to-steamos.md  how-to-ubuntu-desktop.md  how-to-ubuntu-server.md  how-to-wsl.md  how-to.md  local-ai-models.md  network-prep.md  promo.md  release.md  roadmap.md
relay/: README.md  vercel.json
scripts/: README.md  benchmark-ollama-direct-local.js  (+7 more)
(+25 files in other folders)
